# escape-the-mansion

./: .clang-format  .clang-format-ignore  .gitignore  .luarc.json  .stylua.toml  .styluaignore  .watch.yaml  CMakeLists.txt  Makefile  build.zig  build.zig.zon  conf.lua  input.lua  justfile  main.lua  meta.lua  physics.lua  player.lua  render.lua  test-room.lua  tiled.lua
assets/: character.lua  character.tsx  escape-the-mansion.tiled-session  haunted-house.tsx  props.tsx  test-room-new.tmx  test-room.lua  test-room.tmj  test-room.tmx
ecs/: phsyics.lua  render.lua
lib/: ECS.lua
libs/: CMakeLists.txt
pack/: pack.h
src/: camera.lua  door.c  door.h  flashlight.fs  flashlight.vs  gamestate.c  gamestate.h  globals.lua  grid.zig  image.c  image.h  init.c  init.h  input.c  input.h  input.lua  main.c  main.zig  obj.h  physics.c  physics.h  physics.lua  player.c  player.h  player.lua  render.c  render.h  render.lua  resources.c  resources.h  room.lua  room.zig  screen.zig  spotlightfs.glsl  spotlightvs.glsl  tiled.lua  title.c  title.h  title.zig
tiled/: door.tx  room.tx  rooms.tmx
